Patched with https://github.com/jwilberding/erlang-bcrypt/blob/d1ccb8af69ca3aa9a7f52234e20a230c19bb0c2a/rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,10 @@
 % [{"priv/bcrypt_nif.so",
 %   ["c_src/blowfish.o", "c_src/bcrypt.o", "c_src/bcrypt_nif.o", "c_src/async_queue.o"]}]}.
 
+%{port_specs,
+% [{"priv/bcrypt_nif.so",
+%   ["c_src/blowfish.o", "c_src/bcrypt.o", "c_src/bcrypt_nif.o", "c_src/async_queue.o"]}]}.
+
 {port_specs, [
     {"priv/bcrypt_nif.so", [
         "c_src/*.c"
